--- a/midterm/css/style.css
+++ b/midterm/css/style.css
@@ -6,7 +6,6 @@
 body {
   background-color: #7db5e3;
   font-family: verdana, sans-serif;
-  display: flex;
   min-height: 100%;
 }
 
@@ -137,4 +136,5 @@ footer {
   font-family: georgia, times, serif;
   text-align: center;
   font-style: italic;
+  align-content:flex-end;
 }
