--- a/final/css/style.css
+++ b/final/css/style.css
@@ -1,3 +1,8 @@
+* {
+  margin:0;
+  padding:0;
+}
+
 body {
   background-color: #fff;
   width: 100%;
@@ -7,33 +12,109 @@ body {
   font-weight: 400;
 }
 
-container.blue {
+header {
+  float: left;
+  width: 100%;
+  display: flex;
+}
+
+div.banner {
+  width:100vw;
+}
+
+
+div.headcontainerone {
   font-family: Roboto, sans-serif;
   background-color: #095797;
   color: #fff;
   min-height: 72px;
   width: 100%;
-  padding-right: 15px;
-  padding-left: 15px;
-  margin-right: auto;
-  margin-left: auto;
 }
 
-container.bluetwo {
-  width: 100%;
-  padding-right: 15px;
+div.headcontainertwo {
+  width: auto;
   padding-left: 15px;
-  margin-right: auto;
-  margin-left: auto;
   background-color: #095797;
+}
+
+div.header {
+  width:100%;
+  background-color: #fff;
+  padding-top: 10px;
+  padding-bottom: 20px;
+  padding-left: 8%;
+}
+
+div.directory {
+  font-family: Roboto;
+  font-size: 12px;
+  padding-left: 15px;
+  padding-top: 2px;
+}
+
+div.title {
+  padding-left: 15px;
+  margin-top: 3%;
+  font-size: 20px;
+}
+
+div.orange {
+  background-color: #f09686;
+  width:3.2%;
+  height:1%;
+  color: #f09686;
+  font-size: 4px;
 }
 
 button {
   background: none;
   border: none;
   display: inline-block;
-  height: 60px;
-  padding: 0;
-  margin: 0;
+  margin-left: 8%;
+  margin-top: 16px;
   vertical-align: top;
+}
+
+button img{
+  height: 40px;
+}
+
+article.bgimage {
+  background-color: #f09686;
+  padding-top: 50%;
+  width: 100%;
+  height:50%;
+  background-image:url('../images/maskchild.png;');
+  background-position: center center;
+  background-size: 100%,100%;
+  background-repeat:no-repeat;
+}
+
+article.boxes {
+  background-color: #ecf2f7;
+  height: 40%;
+
+}
+
+article.boxes button {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  flex-flow: row wrap;
+  background-color: #fff;
+  width: 22%;
+  height:40%;
+}
+
+article.boxes button img {
+  display: flex;
+  flex-flow: row;
+  align-self:flex-start;
+}
+
+article.boxes button h3 {
+  display: flex;
+  flex-flow: row;
+  align-self: flex-end;
+  color: #223654;
 }
