--- a/final/css/style.css
+++ b/final/css/style.css
@@ -6,11 +6,11 @@
 body {
   background-color: #fff;
   width: 100%;
-  height: 300%;
+  height: auto;
   color: #223654;
   font-family: Roboto, sans-serif;
   font-weight: 400;
-  overflow: auto;
+  overflow-x: hidden;
 }
 
 header {
@@ -120,53 +120,96 @@ article.boxes article.box1 {
   background: url("../images/square.png");
   box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
   background-size: cover;
+  position: relative;
+  border-color: #fff;
+  border-style: solid;
+  border-width: thin;
   width: 20%;
   height: 40%;
 }
 
 article.boxes article.box1:hover {
-  outline-color: #095797;
-  outline: 10px;
+  border-color: #095797;
+  border-style: solid;
+  border-width: thin;
 }
 
 article.boxes article.box2 {
   background: url("../images/square.png");
   box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
   background-size: cover;
+  border-color: #fff;
+  border-style: solid;
+  border-width: thin;
   width: 20%;
   height: 40%;
+  position: relative;
+}
+
+article.boxes article.box2:hover {
+  border-color: #095797;
+  border-style: solid;
+  border-width: thin;
+}
+
+article.boxes article.box2 h3 {
+  /* font-size: 14px; */
+  display: flex;
+  align-self: center;
 }
 
 article.boxes article.box3 {
   background: url("../images/square.png");
   box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
   background-size: cover;
+  border-color: #fff;
+  border-style: solid;
+  border-width: thin;
   width: 20%;
   height: 40%;
+  position: relative;
+}
+
+article.boxes article.box3:hover {
+  border-color: #095797;
+  border-style: solid;
+  border-width: thin;
 }
 
 article.boxes article.box4 {
   background: url("../images/square.png");
   box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
   background-size: cover;
+  border-color: #fff;
+  border-style: solid;
+  border-width: thin;
   width: 20%;
   height: 40%;
+  position: relative;
+}
+
+article.boxes article.box4:hover {
+  border-color: #095797;
+  border-style: solid;
+  border-width: thin;
 }
 
 article.boxes button img {
-  display: flex;
-  align-self:flex-start;
+
 }
 
 article.boxes button div.text {
-
 }
 
 article.boxes button div.text div.par {
+  margin-top: 10%;
+  padding-top: 40%;
+  padding-right: 40%;
   display: flex;
-  flex-direction: column-reverse;
+  flex-direction: column;
   align-self: flex-end;
   color: #223654;
+
 }
 
 article.boxes button h3 {
@@ -174,4 +217,76 @@ article.boxes button h3 {
   flex-flow: row;
   align-self: flex-end;
   color: #223654;
+}
+
+article.goal {
+  background-color: #223654;
+  height:180%;
+  width: 100%;
+  position: absolute;
+}
+
+article.goalcontainer {
+  position: relative;
+  margin-left: 10%;
+  margin-top: 2.5%;
+  background-color: #fff;
+  height:20%;
+  width:80%;
+  color: #223654;
+}
+
+article.goal article.goaltext {
+  margin-left: 8%;
+  padding-top: 2%;
+  font-size: 20px;
+}
+
+article.goal article.goalcontainer article.goaltext h2 {
+  margin-top: 2%;
+}
+
+article.goal article.goalcontainer article.goaltext a{
+  padding-top: 2%;
+}
+
+article.centerimage {
+  height:80%;
+  width: 100%;
+}
+
+article.centerimage article.centerimagebackground {
+  position: relative;
+  margin-left: 10%;
+  margin-top: 10%;
+  width: 80%;
+  height: 70%;
+  background: url("../images/childsit.png");
+  background-size: cover;
+  background-position: center center;
+  background-repeat:no-repeat;
+}
+
+article.textoverlay {
+  margin-left: 60%;
+  background-color: #fff;
+  width:40%;
+  height:35%;
+}
+
+article.textoverlay h2 {
+  padding-top: 5%;
+  padding-left: 8%;
+}
+
+article.textoverlay p {
+  padding-left: 8%;
+  padding-top: 5%;
+  margin-right: 12%;
+}
+
+footer {
+  background-color: #a2a2a2;
+  height: 30%;
+  width: 100%;
 }
