--- a/final/css/style.css
+++ b/final/css/style.css
@@ -1,7 +1,10 @@
 * {
   margin:0;
   padding:0;
+  text-decoration: none;
 }
+
+
 
 body {
   background-color: #fff;
@@ -93,7 +96,7 @@ article.bgimage {
 
 article.boxcontainer {
   width: 100%;
-  height:100%;
+  /* height:100%; */
   box-sizing: border-box;
   padding-top: 2%;
   background-color: #ecf2f7;
@@ -103,7 +106,7 @@ article.boxcontainer {
 article.boxes {
   background-color: #ecf2f7;
   width: 100%;
-  height: 100%;
+  /* height: 100%; */
   display: flex;
   justify-content: space-around;
   align-items: stretch;
@@ -112,8 +115,8 @@ article.boxes {
 
 article.boxes button {
   display: flex;
-  height: 100%;
-    padding-bottom: 60%;
+  height: 50%;
+    margin-bottom: 20%;
 }
 
 article.boxes article.box1 {
@@ -132,6 +135,11 @@ article.boxes article.box1:hover {
   border-color: #095797;
   border-style: solid;
   border-width: thin;
+}
+
+article.boxes article.box1 h3 {
+  padding-left: 3%;
+  padding-top: 3%;
 }
 
 article.boxes article.box2 {
@@ -153,9 +161,8 @@ article.boxes article.box2:hover {
 }
 
 article.boxes article.box2 h3 {
-  /* font-size: 14px; */
-  display: flex;
-  align-self: center;
+  padding-left: 3%;
+  padding-top: 3%;
 }
 
 article.boxes article.box3 {
@@ -176,6 +183,11 @@ article.boxes article.box3:hover {
   border-width: thin;
 }
 
+article.boxes article.box3 h3 {
+  padding-left: 3%;
+  padding-top: 3%;
+}
+
 article.boxes article.box4 {
   background: url("../images/square.png");
   box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
@@ -184,7 +196,7 @@ article.boxes article.box4 {
   border-style: solid;
   border-width: thin;
   width: 20%;
-  height: 40%;
+  height: 20%;
   position: relative;
 }
 
@@ -192,6 +204,11 @@ article.boxes article.box4:hover {
   border-color: #095797;
   border-style: solid;
   border-width: thin;
+}
+
+article.boxes article.box4 h3 {
+  padding-left: 3%;
+  padding-top: 3%;
 }
 
 article.boxes button img {
@@ -203,8 +220,8 @@ article.boxes button div.text {
 
 article.boxes button div.text div.par {
   margin-top: 10%;
-  padding-top: 40%;
-  padding-right: 40%;
+  padding-top: 10%;
+  padding-right: 20%;
   display: flex;
   flex-direction: column;
   align-self: flex-end;
@@ -221,7 +238,7 @@ article.boxes button h3 {
 
 article.goal {
   background-color: #223654;
-  height:180%;
+height:auto;
   width: 100%;
   position: absolute;
 }
@@ -240,27 +257,35 @@ article.goal article.goaltext {
   margin-left: 8%;
   padding-top: 2%;
   font-size: 20px;
+  padding-bottom: 10%;
 }
 
 article.goal article.goalcontainer article.goaltext h2 {
-  margin-top: 2%;
+  margin-top: 5%;
 }
 
 article.goal article.goalcontainer article.goaltext a{
-  padding-top: 2%;
+  padding-top: 5%;
+}
+
+article.benefits {
+  height: 50%;
+  width: 100%;
+  padding-bottom: 10%;
 }
 
 article.centerimage {
-  height:80%;
+  height:120%;
   width: 100%;
 }
 
 article.centerimage article.centerimagebackground {
   position: relative;
   margin-left: 10%;
-  margin-top: 10%;
+  margin-top: 5%;
   width: 80%;
-  height: 70%;
+  height: 90%;
+  padding-bottom: 10%;
   background: url("../images/childsit.png");
   background-size: cover;
   background-position: center center;
@@ -272,6 +297,7 @@ article.textoverlay {
   background-color: #fff;
   width:40%;
   height:35%;
+  padding-bottom: 5%;
 }
 
 article.textoverlay h2 {
@@ -285,8 +311,50 @@ article.textoverlay p {
   margin-right: 12%;
 }
 
-footer {
-  background-color: #a2a2a2;
-  height: 30%;
+
+article.conduct {
+  background-color: #223654;
+height:auto;
   width: 100%;
+  position: absolute;
+}
+
+article.conductcontainer {
+  position: relative;
+  margin-left: 10%;
+  margin-top: 2.5%;
+  background-color: #fff;
+  height:20%;
+  width:80%;
+  color: #223654;
+}
+
+article.conduct article.conducttext {
+  margin-left: 8%;
+  padding-top: 2%;
+  font-size: 20px;
+  padding-bottom: 10%;
+}
+
+article.conduct article.conductcontainer article.conducttext h2 {
+  margin-top: 5%;
+}
+
+article.conduct article.conductcontainer article.conducttext a{
+  padding-top: 5%;
+}
+
+footer {
+  width: 100%;
+  height:10%;
+  padding-bottom:5%;
+  padding-left: 45%;
+  padding-top: 5%;
+  background-color: #fff;
+  position: absolute;
+}
+
+footer.footimg img {
+  display: flex;
+  align-self: center;
 }
